# ipu_assembly_support

./: .eslintrc.js  .gitignore  LICENSE.md  README.md  THIRD_PARTY_LICENSES_NPM.txt  THIRD_PARTY_LICENSES_RUST.html  about.hbs  about.toml  language-configuration.json  package-lock.json  package.json  tsconfig.json
buildsystem/src/: main.rs
client/: extension.ts
isa_doc_generated/completion/: $ANS_DCOUNT.md  $CCCSLOAD.md  $COUNT_L.md  $COUNT_U.md  $CR.md  $CTXT_STS.md  $DBG_BRK_ID.md  $DBG_CTL.md  $DBG_DATA.md  $DBG_ECLR.md  $DBG_ECSR.md  $DBG_IEXEC.md  $DBG_IOWNER.md  $DBG_RBRK.md  $DBG_RBRK_VERT.md  $EXCHANGE_ADJ.md  $EXCHANGE_CTL.md  $FP_CLR.md  $FP_CTL.md  $FP_ICTL.md  $FP_STS.md  $INCOMING_BASE.md  $INCOMING_DCOUNT.md  $INCOMING_DELTA.md  $INCOMING_FORMAT.md  $INCOMING_MUX.md  $INCOMING_MUXPAIR.md  $INCOMING_SINIT.md  $OUTGOING_BASE.md  $OUTGOING_DELTA.md  $PC.md  $PRNG_0_0.md  $PRNG_0_1.md  $PRNG_1_0.md  $PRNG_1_1.md  $PRNG_SEED.md  $REPEAT_COUNT.md  $REPEAT_END.md  $REPEAT_FIRST.md  (+248 more)
isa_md_to_rs/: Cargo.toml
server/: Cargo.toml  build.rs
server/src/: completion.rs  definitions.rs  diagnostics.rs  generated.rs  hover.rs  language.rs  main.rs  signature.rs  text_document.rs
server/tree_sitter_ipu_asm/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
server/tree_sitter_ipu_asm/bindings/node/: binding.cc  index.js
server/tree_sitter_ipu_asm/bindings/rust/: lib.rs
server/tree_sitter_ipu_asm/corpus/: Instructions.S  Labels.S
server/tree_sitter_ipu_asm/src/: grammar.json  node-types.json  parser.c
syntaxes/: ipu_asm.tmLanguage.json
(+609 files in other folders)
