[package]
name = "ipu_assembly_server"
version = "0.1.0"
authors = ["Tim Hutt <timh@graphcore.ai>"]
edition = "2021"
license = "MIT"

[dependencies]
notify = "5.0.0-pre.2"
once_cell = "1.4.0"
phf = "0.10.1"
tokio = { version = "1.18.5", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.14.1"
tree-sitter = "0.20.3"

[build-dependencies]
cc = "1.0.54"

# This fixes cross-compilation.
[patch.crates-io]
cc = { git = "https://github.com/Timmmm/cc-rs.git", branch = "musl_names" }

[profile.release]
# This makes incremental release builds *much* faster.
incremental = true
